ran out of time to finish

--- a/problem1.html
+++ b/problem1.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Memphis</title>
-
+    <link rel="stylesheet" href="problem1.css">
 </head>
 <header>
     <h1>
         Memphis, Tennessee
     </h1>
 </header>
-<body id="top">
+<body id="top" class="backdrop">
 <section>
 <article>
     <h3>
