ran out of time

--- a/problem2.html
+++ b/problem2.html
@@ -26,6 +26,7 @@
         <h3>
             Favorite Sports Team
         </h3>
+        Patriots
     </article>
 </section>
 <aside class="accent">
